# lm-human-preference-details

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  deepspeed.yaml  oai.py  pyproject.toml  train_ppo.sbatch  train_pythia.sbatch  train_reward.sbatch  train_sft.sbatch
.github/workflows/: tests.yaml
benchmark/: benchmark.py  benchmark_core.sh  summarize.slurm_template  trl.slurm_template
lm_human_preference_details/: data.py  tldr_dataset.py  train_both_accelerate.py  train_both_accelerate_summarize.py  train_both_jax.py  train_policy.py  train_policy.sh  train_policy_accelerate.py  train_policy_accelerate2.py  train_policy_accelerate_pipeline.py  train_policy_accelerate_summarize.py  train_policy_accelerate_summarize_separate.py  train_policy_accelerate_summarize_separate1.py  train_policy_accelerate_summarize_separate3.py  train_policy_accelerate_summarize_separate4.py  train_policy_accelerate_summarize_separate5_load_critic.py  train_policy_accelerate_summarize_separate6_correct_reward_index.py  train_policy_accelerate_summarize_separate7_correct_reward_index_no_load_critic.py  train_policy_accelerate_summarize_separate8_correct_reward_index_deepspeed3.py  train_policy_jax.py  train_policy_pythia.sh  train_reward.py  train_reward_accelerate.py  train_reward_accelerate_summarize.py  train_reward_jax.py  train_reward_jax_multiprocess.py  train_sft_accelerate_summarize.py  train_summarize.sh
lm_human_preference_details/legacy_single_gpu_only/: train_both.py  train_policy.py  train_reward.py
lm_human_preference_details/summarization/: minimal_rm copy.py  minimal_rm.py  minisft.py  (+13 more)
tests/: test_e2e.py  test_gae.py
(+8 files in other folders)
