[tool.poetry]
name = "lm-human-preference-details"
version = "0.1.0"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]
readme = "README.md"
packages = [{include = "lm_human_preference_details"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "2.0.0"
tyro = "^0.5.3"
datasets = "^2.12.0"
wandb = "^0.15.4"
nvitop = "^1.1.2"
ftfy = "^6.1.1"
rich = "^13.4.2"
transformers = "^4.30.1"
tensorboard = "^2.13.0"
accelerate = "^0.22.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
